# labs-devsecops-devops

./: .gitignore  README.md
.github/workflows/: build-and-push-images.yml  zero-touch-k8s-digitalocean.yml
zero-touch-kubernestes-digital-ocean/: root-app.yaml
zero-touch-kubernestes-digital-ocean/apps/: app-a.yaml  app-b.yaml  app-c.yaml  infrastructure.yaml
zero-touch-kubernestes-digital-ocean/docs/: walkthrough.md
zero-touch-kubernestes-digital-ocean/iac/: main.tf  terraform.tfvars.example  variables.tf
zero-touch-kubernestes-digital-ocean/manifests/app-a/: app-a.yaml
zero-touch-kubernestes-digital-ocean/manifests/app-b/: app-b.yaml
zero-touch-kubernestes-digital-ocean/manifests/app-c/: app-c.yaml
zero-touch-kubernestes-digital-ocean/manifests/dashboards/: platform-overview.yaml
zero-touch-kubernestes-digital-ocean/manifests/infra/: mongodb.yaml  postgres.yaml  rabbitmq.yaml
zero-touch-kubernestes-digital-ocean/src/app-a/backend/: Dockerfile  go.mod  main.go
zero-touch-kubernestes-digital-ocean/src/app-a/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
zero-touch-kubernestes-digital-ocean/src/app-b/backend-api/: Dockerfile  main.py  requirements.txt
zero-touch-kubernestes-digital-ocean/src/app-b/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
zero-touch-kubernestes-digital-ocean/src/app-b/worker/: Dockerfile  go.mod  main.go
zero-touch-kubernestes-digital-ocean/src/app-c/backend/: Cargo.toml  Dockerfile
zero-touch-kubernestes-digital-ocean/src/app-c/backend/src/: main.rs
(+10 files in other folders)
